--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Personal Website</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Personal Page!</h1>
+  </header>
 
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+
+  <main>
+    <div class="paragraph-box">
+      <p>Hi! My name is Taggert Baker, and I'm currently a Junior at Kansas State University. Explore my page!</p>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">My Resume</a></li>
+        <li><a href="picturesofme.html">Pictures of Me!</a></li>
+        <li><a href="aboutme.html">About Me!</a></li>
+      </ul>
+    </nav>
+  </main>
+</body>
 </html>
