--- a/picturesofme.html
+++ b/picturesofme.html
@@ -57,10 +57,10 @@
   <main>
     <div class="image-container">
       <a href="pictures/me1.JPG">
-        <img src="pictures/me1.JPG">
+        <img src="pictures/me1.JPG" alt="Here I am holding the state football trophy!">
       </a>
       <a href="pictures/me2.png">
-        <img src="pictures/me2.png">
+        <img src="pictures/me2.png" alt="Here's one of my better pictures from my senior year.">
       </a>
     </div>
   </main>
