--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
 
   <main>
+    <div class="rolling-circle"></div>
     <div class="paragraph-box">
       <p>Hi! My name is Taggert Baker, and I'm currently a Junior at Kansas State University. Explore my page!</p>
     </div>
